Page template design with header and footer

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>Hello ETF!</h1>
-
-<router-outlet></router-outlet>
+<div class="body-container">
+    <header class="header">
+        <img src="assets/img/bank.png" alt="bankarski logo">
+        <p>Fiskalizacija</p>
+    </header>
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
+    <footer class="footer">Feđa Vujičić - Programiranje Internet Aplikacija 2022.</footer>
+</div>
