--- a/frontend/src/app/login-admin/login-admin.component.html
+++ b/frontend/src/app/login-admin/login-admin.component.html
@@ -1,1 +1,6 @@
-<p>login-admin works!</p>
+<div class="container">
+    <p class="login-item login-title">Prijava</p>
+    <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input">
+    <input type="password" placeholder="Unesite lozinku" class="login-item login-input">
+    <button class="login-item login-button">Uloguj se</button>
+</div>
