--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,3 +1,10 @@
-<p>login works!</p>
-
-<a routerLink="../register">e</a>
+<div class="container">
+    <p class="login-item login-title">Prijava</p>
+    <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input">
+    <input type="password" placeholder="Unesite lozinku" class="login-item login-input">
+    <button class="login-item login-button">Uloguj se</button>
+    <span class="login-item login-text">
+        Nemate nalog?
+        <a routerLink="../register" class="login-link">Registrujte se</a>
+    </span>
+</div>
