Designed register component

--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,1 +1,15 @@
-<p>register works!</p>
+<div class="container">
+    <p class="register-item register-title">Registracija</p>
+    <input type="text" placeholder="Ime i prezime odgovornog lica" class="register-item register-input">
+    <input type="text" placeholder="Korisničko ime" class="register-item register-input">
+    <input type="password" placeholder="Lozinka" class="register-item register-input">
+    <input type="password" placeholder="Potvrdi lozinku" class="register-item register-input">
+    <input type="text" placeholder="Kontakt telefon" class="register-item register-input">
+    <input type="text" placeholder="E-mail adresa" class="register-item register-input">
+    <input type="text" placeholder="Naziv preduzeća" class="register-item register-input">
+    <input type="text" placeholder="Adresa sedišta preduzeća" class="register-item register-input">
+    <input type="text" placeholder="Poreski identifikacioni broj" class="register-item register-input">
+    <input type="text" placeholder="Matični broj preduzeća" class="register-item register-input">
+    <button class="register-item register-button">Registruj se</button>
+    <button class="register-item back-button" routerLink="../login">Nazad</button>
+</div>
