--- a/frontend/src/app/login-admin/login-admin.component.html
+++ b/frontend/src/app/login-admin/login-admin.component.html
@@ -1,6 +1,60 @@
 <div class="container">
-    <p class="login-item login-title">Prijava</p>
-    <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input">
-    <input type="password" placeholder="Unesite lozinku" class="login-item login-input">
-    <button class="login-item login-button">Uloguj se</button>
+    <div class="receipts">
+        <h3>Poslednjih 5 racuna</h3>
+        <br>
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+        <br>
+
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+        <br>
+
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+        <br>
+
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+        <br>
+
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+    </div>
+    <div class="login">
+        <p class="login-item login-title">Prijava</p>
+        <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input">
+        <input type="password" placeholder="Unesite lozinku" class="login-item login-input">
+        <button class="login-item login-button">Uloguj se</button>
+    </div>
 </div>
