--- a/frontend/src/app/register/register.component.css
+++ b/frontend/src/app/register/register.component.css
@@ -8,15 +8,39 @@
     justify-content: center;
 }
 
-/* register box */
+/* main box */
 .container {
+    display: flex;
+    width: 800px;
+    border-radius: 3px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    height: 700px
+}
+
+/* receipts box */
+.receipts {
+    background-color: #3D4C41;
+    flex: 1;
+    overflow-y: auto;
+}
+
+@media (max-width: 800px) {
+    .receipts {
+        flex: 0;
+    }
+
+    .container {
+        width: 400px
+    }
+}
+
+/* register box */
+.register {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #3D4C41;
     width: 400px;
-    border-radius: 3px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 /* Every item in the register box */
