--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,15 +1,69 @@
 <div class="container">
-    <p class="register-item register-title">Registracija</p>
-    <input type="text" placeholder="Ime i prezime odgovornog lica" class="register-item register-input">
-    <input type="text" placeholder="Korisničko ime" class="register-item register-input">
-    <input type="password" placeholder="Lozinka" class="register-item register-input">
-    <input type="password" placeholder="Potvrdi lozinku" class="register-item register-input">
-    <input type="text" placeholder="Kontakt telefon" class="register-item register-input">
-    <input type="text" placeholder="E-mail adresa" class="register-item register-input">
-    <input type="text" placeholder="Naziv preduzeća" class="register-item register-input">
-    <input type="text" placeholder="Adresa sedišta preduzeća" class="register-item register-input">
-    <input type="text" placeholder="Poreski identifikacioni broj" class="register-item register-input">
-    <input type="text" placeholder="Matični broj preduzeća" class="register-item register-input">
-    <button class="register-item register-button">Registruj se</button>
-    <button class="register-item back-button" routerLink="../login">Nazad</button>
+    <div class="receipts">
+        <h3>Poslednjih 5 racuna</h3>
+        <br>
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+        <br>
+
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+        <br>
+
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+        <br>
+
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+        <br>
+
+        <p>Preduzece: Preduzece 1</p>
+        <p>Stavka 1 - 5000,00</p>
+        <p>Stavka 2 - 5000,00</p>
+        <p>Stavka 3 - 5000,00</p>
+        <p>Stavka 4 - 5000,00</p>
+        <p>Cena bez PDV-a</p>
+        <p>Iznos poreza: 10%</p>
+        <p>Iznos racuna: 22.000,00</p>
+    </div>
+    <div class="register">
+        <p class="register-item register-title">Registracija</p>
+        <input type="text" placeholder="Ime i prezime odgovornog lica" class="register-item register-input">
+        <input type="text" placeholder="Korisničko ime" class="register-item register-input">
+        <input type="password" placeholder="Lozinka" class="register-item register-input">
+        <input type="password" placeholder="Potvrdi lozinku" class="register-item register-input">
+        <input type="text" placeholder="Kontakt telefon" class="register-item register-input">
+        <input type="text" placeholder="E-mail adresa" class="register-item register-input">
+        <input type="text" placeholder="Naziv preduzeća" class="register-item register-input">
+        <input type="text" placeholder="Adresa sedišta preduzeća" class="register-item register-input">
+        <input type="text" placeholder="Poreski identifikacioni broj" class="register-item register-input">
+        <input type="text" placeholder="Matični broj preduzeća" class="register-item register-input">
+        <button class="register-item register-button">Registruj se</button>
+        <button class="register-item back-button" routerLink="../login">Nazad</button>
+    </div>
 </div>
