--- a/frontend/src/app/components/register/register.component.css
+++ b/frontend/src/app/components/register/register.component.css
@@ -14,7 +14,7 @@
     width: 800px;
     border-radius: 3px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    height: 700px
+    height: 720px;
 }
 
 /* receipts box */
@@ -41,6 +41,12 @@
     align-items: center;
     background-color: #3D4C41;
     width: 400px;
+    overflow-y: auto;
+}
+
+.message {
+    color: #F00;
+    white-space: pre-wrap
 }
 
 /* Every item in the register box */
