--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -53,17 +53,18 @@
     </div>
     <div class="register">
         <p class="register-item register-title">Registracija</p>
-        <input type="text" placeholder="Ime i prezime odgovornog lica" class="register-item register-input">
-        <input type="text" placeholder="Korisničko ime" class="register-item register-input">
-        <input type="password" placeholder="Lozinka" class="register-item register-input">
-        <input type="password" placeholder="Potvrdi lozinku" class="register-item register-input">
-        <input type="text" placeholder="Kontakt telefon" class="register-item register-input">
-        <input type="text" placeholder="E-mail adresa" class="register-item register-input">
-        <input type="text" placeholder="Naziv preduzeća" class="register-item register-input">
-        <input type="text" placeholder="Adresa sedišta preduzeća" class="register-item register-input">
-        <input type="text" placeholder="Poreski identifikacioni broj" class="register-item register-input">
-        <input type="text" placeholder="Matični broj preduzeća" class="register-item register-input">
-        <button class="register-item register-button">Registruj se</button>
+        <p class="message">{{ message }}</p>
+        <input type="text" placeholder="Ime i prezime odgovornog lica" class="register-item register-input" [(ngModel)]="repName">
+        <input type="text" placeholder="Korisničko ime" class="register-item register-input" [(ngModel)]="username">
+        <input type="password" placeholder="Lozinka" class="register-item register-input" [(ngModel)]="password">
+        <input type="password" placeholder="Potvrdi lozinku" class="register-item register-input" [(ngModel)]="passwordSecond">
+        <input type="text" placeholder="Kontakt telefon" class="register-item register-input" [(ngModel)]="phone">
+        <input type="text" placeholder="E-mail adresa" class="register-item register-input" [(ngModel)]="email">
+        <input type="text" placeholder="Naziv preduzeća" class="register-item register-input" [(ngModel)]="name"> 
+        <input type="text" placeholder="Adresa sedišta preduzeća" class="register-item register-input" [(ngModel)]="address">
+        <input type="text" placeholder="Poreski identifikacioni broj" class="register-item register-input" [(ngModel)]="pib">
+        <input type="text" placeholder="Matični broj preduzeća" class="register-item register-input" [(ngModel)]="mb">
+        <button class="register-item register-button" (click)="register()">Registruj se</button>
         <button class="register-item back-button" routerLink="../login">Nazad</button>
     </div>
 </div>
