--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -11,6 +11,11 @@
     display: flex;
     align-items: center;
     font-size: 3rem;
+    height: 10vh;
+}
+
+.header img {
+    height: 100%;
 }
 
 .content {
