--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
         <p>Iznos poreza: 10%</p>
         <p>Iznos racuna: 22.000,00</p>
         <br>
-        
+
         <p>Preduzece: Preduzece 1</p>
         <p>Stavka 1 - 5000,00</p>
         <p>Stavka 2 - 5000,00</p>
@@ -53,9 +53,10 @@
     </div>
     <div class="login">
         <p class="login-item login-title">Prijava</p>
-        <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input">
-        <input type="password" placeholder="Unesite lozinku" class="login-item login-input">
-        <button class="login-item login-button">Uloguj se</button>
+        <p style="color: red">{{ message }}</p>
+        <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input" [(ngModel)]="username">
+        <input type="password" placeholder="Unesite lozinku" class="login-item login-input" [(ngModel)]="password">
+        <button class="login-item login-button" (click)="login()">Uloguj se</button>
         <span class="login-item login-text">
             Nemate nalog?
             <a routerLink="../register" class="login-link">Registrujte se</a>
