--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -64,7 +64,7 @@
         <input type="text" placeholder="Adresa sedišta preduzeća" class="register-item register-input" [(ngModel)]="address">
         <input type="text" placeholder="Poreski identifikacioni broj" class="register-item register-input" [(ngModel)]="pib">
         <input type="text" placeholder="Matični broj preduzeća" class="register-item register-input" [(ngModel)]="mb">
-        <input type="file" class="register-item register-input" (change)="onFileChanged($event)" accept="image/png, image/jpg">
+        <input type="file" class="register-item register-input" (change)="onFileChanged($event)" accept=".jpg, image/png">
         <button class="register-item register-button" (click)="register()">Registruj se</button>
         <button class="register-item back-button" routerLink="../login">Nazad</button>
     </div>
