Main company page structure and navigation

--- a/frontend/src/app/components/company/company.component.html
+++ b/frontend/src/app/components/company/company.component.html
@@ -1,1 +1,33 @@
-<p>company works!</p>
+<div class="navbar">
+    <ul>
+        <a routerLink="info">
+            <li>Podaci</li>
+        </a>
+        <a routerLink="buyers">
+            <li>Naručioci</li>
+        </a>
+        <a routerLink="goods">
+            <li>Robe i usluge</li>
+        </a>
+        <a routerLink="categories">
+            <li>Raspored artikala</li>
+        </a>
+        <a routerLink="tables">
+            <li>Raspored stolova</li>
+        </a>
+        <a routerLink="receipts">
+            <li>Izdavanje računa</li>
+        </a>
+        <a routerLink="reports">
+            <li>Pregled izveštaja</li>
+        </a>
+        <a routerLink="info">
+            <li>Promena lozinke</li>
+        </a>
+
+    </ul>
+</div>
+
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
