Added radio selection to login screen

--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -72,7 +72,7 @@
 
 /* text for registering */
 .login-text {
-    margin: 3em 0;
+    margin: 1.5em 0;
 }
 
 .login-link {
@@ -82,4 +82,12 @@
 
 .login-link:hover {
     color: #49B5D6;
+}
+
+.login-type {
+    display: flex;
+}
+
+.login-type-item {
+    margin-right: .5em;
 }
