Company info page is now dislaying all of the correct information

--- a/frontend/src/app/components/company-pages/info/info.component.css
+++ b/frontend/src/app/components/company-pages/info/info.component.css
@@ -78,3 +78,12 @@
 .info-unit-item ul li {
     list-style: none;
 }
+
+.double-list {
+    display: flex;
+}
+
+.second-window-item {
+    margin: 2em;
+    color: black;
+}
