--- a/frontend/src/app/components/company-pages/company-pw-change/company-pw-change.component.html
+++ b/frontend/src/app/components/company-pages/company-pw-change/company-pw-change.component.html
@@ -1,1 +1,8 @@
-<p>company-pw-change works!</p>
+
+<div class="content">
+    <input type="password" placeholder="Unesite staru lozinku" [(ngModel)]="oldPassword">
+    <input type="password" placeholder="Unesite novu lozinku" [(ngModel)]="newPassword">
+    <input type="password" placeholder="Potvrdite novu lozinku" [(ngModel)]="confirmPassword">
+    <button (click)="changePassword()">Potvrdi</button>
+    <div class="message">{{ message }}</div>
+</div>
