--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -53,7 +53,7 @@
     </div>
     <div class="login">
         <p class="login-item login-title">Prijava</p>
-        <p style="color: red">{{ message }}</p>
+        <p class="message">{{ message }}</p>
         <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input" [(ngModel)]="username">
         <input type="password" placeholder="Unesite lozinku" class="login-item login-input" [(ngModel)]="password">
         <div class="login-item login-input login-type">
