Added the admin login, page routing and password change

--- a/frontend/src/app/components/company-pages/info/info.component.html
+++ b/frontend/src/app/components/company-pages/info/info.component.html
@@ -37,7 +37,7 @@
                 <div class="info-col-item">{{ company.pib }}</div>
                 <div class="info-col-item">{{ company.mb }}</div>
                 <div class="info-col-item">{{ company.category }}</div>
-                <div class="info-col-item">{{ company.pdv }}</div>
+                <div class="info-col-item">{{ pdv() }}</div>
                 <div class="info-col-item">{{ company.status }}</div>
             </div>
         </div>
