--- a/frontend/src/app/components/login-admin/login-admin.component.html
+++ b/frontend/src/app/components/login-admin/login-admin.component.html
@@ -53,8 +53,9 @@
     </div>
     <div class="login">
         <p class="login-item login-title">Prijava</p>
-        <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input">
-        <input type="password" placeholder="Unesite lozinku" class="login-item login-input">
-        <button class="login-item login-button">Uloguj se</button>
+        <input type="text" placeholder="Unesite korisničko ime" class="login-item login-input" [(ngModel)]="username">
+        <input type="password" placeholder="Unesite lozinku" class="login-item login-input" [(ngModel)]="password">
+        <button class="login-item login-button" (click)="login()">Uloguj se</button>
+        <div>{{ message }}</div>
     </div>
 </div>
