Customer component with page navigation and password change

--- a/frontend/src/app/components/customer/customer.component.html
+++ b/frontend/src/app/components/customer/customer.component.html
@@ -1,1 +1,24 @@
-<p>customer works!</p>
+<div class="navbar">
+    <ul>
+        <a routerLink="companies-products" (click)="selectPage('companies-products')" [ngClass]="{'navbar-selected': selectedPage === 'companies-products'}">
+            <li>Preduzeća u artikli</li>
+        </a>
+        <a routerLink="account" (click)="selectPage('account')" [ngClass]="{'navbar-selected': selectedPage === 'account'}">
+            <li>Pregled računa</li>
+        </a>
+        <a routerLink="account-details" (click)="selectPage('account-details')" [ngClass]="{'navbar-selected': selectedPage === 'account-details'}">
+            <li>Detalji računa</li>
+        </a>
+        <a routerLink="customer-pw-change" (click)="selectPage('customer-pw-change')" [ngClass]="{'navbar-selected': selectedPage === 'customer-pw-change'}">
+            <li>Promena lozinke</li>
+        </a>
+    </ul>
+</div>
+
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
+
+<div class="page-bottom">
+    <button class="logout-button" (click)="logout()">Izloguj se</button>
+</div>
